--- a/google-translate.gemspec.erb
+++ b/google-translate.gemspec.erb
@@ -15,6 +15,8 @@ Gem::Specification.new do |spec|
   spec.test_files    = spec.files.grep(%r{^(test|spec|features)/})
   spec.require_paths = ["lib"]
   spec.version       = GoogleTranslate::VERSION
+
+  <%= project_dependencies %>
 end
 
 
