--- a/google-translate.gemspec.erb
+++ b/google-translate.gemspec.erb
@@ -4,7 +4,7 @@ require File.expand_path(File.dirname(__FILE__) + '/lib/google_translate/version
 
 Gem::Specification.new do |spec|
   spec.name          = "google-translate"
-  spec.summary       = %q{Simple client for Google Translate API.}
+  spec.summary       = %q{Summary: Simple client for Google Translate API.}
   spec.description   = %q{Simple client for Google Translate API.}
   spec.email         = "alexander.shvets@gmail.com"
   spec.authors       = ["Alexander Shvets"]
